--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -15,7 +15,7 @@ jobs:
 
     - name: read labels
       env:
-        GITHUB_LABELS: ${{ toJSON(github.event.pull_request_labels) }}
+        GITHUB_LABELS: ${{ toJSON(github.event.pull_request.labels) }}
       run: echo "$GITHUB_LABELS"
 
 #    - name: Set up Go
