--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -24,7 +24,7 @@ jobs:
         token: ${{ secrets.REPO_ACCESS_TOKEN }}
         repository: tgmendes/argo-config
         event-type: create-pull-request
-        client-payload: ${{ toJSON(github.event.pull_request) }}
+        client-payload: ${{ toJSON(github.event.pull_request.labels)[0] }}
 
 #    - name: Set up Go
 #      uses: actions/setup-go@v2
