add custom event type

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -23,7 +23,7 @@ jobs:
       with:
         token: ${{ secrets.REPO_ACCESS_TOKEN }}
         repository: tgmendes/argo-config
-        event-type: create-pull-request
+        event-type: trigger_deployment
         client-payload: '{"labels": ${{ toJSON(github.event.pull_request.labels) }}}'
 
 #    - name: Set up Go
